# ChangeLog for dev-perl/Filesys-DiskSpace
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/Filesys-DiskSpace/ChangeLog,v 1.8 2007/12/27 14:09:23 ticho Exp $

  27 Dec 2007; Andrej Kacian <ticho@gentoo.org>
  Filesys-DiskSpace-0.05.ebuild:
  Stable on x86.

  15 Jan 2007; Michael Cummings <mcummings@gentoo.org>
  Filesys-DiskSpace-0.05.ebuild:
  Ebuild maintenance

  07 Aug 2006; Michael Cummings <mcummings@gentoo.org>
  Filesys-DiskSpace-0.05.ebuild:
  Marking amd64 stable

  05 Aug 2006; Michael Cummings <mcummings@gentoo.org>
  Filesys-DiskSpace-0.05.ebuild:
  Adding perl dep; fixed DEPEND

  12 Jun 2006; Michael Cummings <mcummings@gentoo.org>
  Filesys-DiskSpace-0.05.ebuild:
  Marking sparc stable

  15 May 2006; Jon Hood <squinky86@gentoo.org>
  Filesys-DiskSpace-0.05.ebuild:
  Add ~amd64 in preparation for #121759.

  04 Apr 2006; Luca Barbato <lu_zero@gentoo.org>
  Filesys-DiskSpace-0.05.ebuild:
  Marked ~ppc

*Filesys-DiskSpace-0.05 (03 Apr 2006)

  03 Apr 2006; <mcumming@gentoo.org> +metadata.xml,
  +Filesys-DiskSpace-0.05.ebuild:
  Deps for mon
